# cull

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  package-check.yml  release.yml
benchmark/: README.md  run.py  suite.json  test_run.py
benchmark/expected/: ai_util_sprawl.json  api_taskforge.json  async_worker_hub.json  autocli_ops.json  clean_library_core.json  clean_service_core.json  configsmith.json  datapulse_pipeline.json  exportkit.json  graphstress_large.json  ledgerflow.json  ml_signal_lab.json  namespace_mesh.json  plugin_market.json  test_reach_app.json
benchmark/projects/ai_util_sprawl/: pyproject.toml
benchmark/projects/api_taskforge/: pyproject.toml
benchmark/projects/async_worker_hub/: pyproject.toml
benchmark/projects/autocli_ops/: pyproject.toml
benchmark/projects/clean_library_core/: pyproject.toml
benchmark/projects/clean_service_core/: pyproject.toml
benchmark/projects/configsmith/: pyproject.toml
benchmark/projects/datapulse_pipeline/: pyproject.toml
benchmark/projects/exportkit/: pyproject.toml
benchmark/projects/graphstress_large/: pyproject.toml
benchmark/projects/ledgerflow/: pyproject.toml
benchmark/projects/ml_signal_lab/: pyproject.toml
benchmark/projects/namespace_mesh/: pyproject.toml
benchmark/projects/plugin_market/: pyproject.toml
benchmark/projects/test_reach_app/: pyproject.toml
crates/cull-cli/: Cargo.toml
crates/cull-cli/src/: main.rs
crates/cull-cli/tests/: check.rs
crates/cull-core/: Cargo.toml
crates/cull-python/: Cargo.toml
crates/culler-cli/: Cargo.toml
crates/culler-cli/src/: main.rs
crates/culler-cli/tests/: check.rs
crates/culler-core/: Cargo.toml
crates/culler-python/: Cargo.toml
docs/: v0-engineering-specification.md  v0-implementation-plan.md
docs/notes/: part-1d-implementation-note.md  part-3-implementation-note.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_definitions.rs
(+401 files in other folders)
