[package]
name = "culler-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
culler-core = { version = "0.1.0", path = "../crates/culler-core" }
culler-python = { version = "0.1.0", path = "../crates/culler-python" }
libfuzzer-sys = "0.4"

[[bin]]
name = "parse_definitions"
path = "fuzz_targets/parse_definitions.rs"
test = false
doc = false
bench = false
