[package]
name = "cull-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "cull"
path = "src/main.rs"

[dependencies]
clap.workspace = true
cull-core = { version = "0.1.0", path = "../cull-core" }
cull-python = { version = "0.1.0", path = "../cull-python" }
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
